--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
 }
 .Form input[type="radio"]:checked + span {
   border-radius: 10px;
-  background-color: rgba(201, 209, 165, 0.165);
+  background-color: rgba(255, 255, 255, 0.165);
 }
 .Form input[type="radio"]:hover + span {
   cursor: pointer;
@@ -89,6 +89,15 @@
   padding: 8px;
 }
 .Form input[type="submit"] {
-  width: 100px;
+  width: 120px;
+  height: 40px;
   margin: 20px 0;
+  background-color: #E7B10A;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  color: black;
 }
